# generic_engine_0

./: .gitignore  license.txt  readme.md
core/: core.h  log.h  platform_def.h  window_win32.h  window_x11.h
editor/: CMakeLists.txt  editor.c
runtime/: CMakeLists.txt  runtime.c
